--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+---
+---
+
+@import "{{ site.theme }}";
+
 body {
     text-align: center; /* Center the content */
     font-family: Arial, sans-serif; /* Use a common, readable font */
